--- a/app/views/students/find_student.html.erb
+++ b/app/views/students/find_student.html.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag "style", media: "all", "data-turbo-track": "reload" %>
-  <title>Document</title>
+  <title>Search Scores</title>
 </head>
 <body>
   
@@ -19,7 +19,7 @@
     <div class="SideBar">
       <h3 style="font-weight: bold;">Menu</h3>
       <ul >
-        <li><a href="/dashboard" >Dashboard</a></li>
+        <li><a href="/dashboard" >Top 10</a></li>
         <li><a href="/" style="font-weight: bold;">Search Scores</a></li>
         <li><a href="/report" >Reports</a></li>
       </ul>
