--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -89,11 +89,10 @@
 }
 
 .top-group{
-    margin: 30px 30px;
-    width: 80%;
+    margin: 20px 20px;
+    width: 100%;
     text-align: center;
     font-size: 20px;
-    
 }
 
 th {
@@ -118,3 +117,73 @@ tr:hover {background-color: coral;}
     height: 500px; /* Tăng chiều cao nếu cần */
  
   }
+
+
+  /* Media Query cho màn hình nhỏ hơn 768px (Mobile) */
+@media (max-width: 768px) {
+    .container {
+        display: flex;
+        flex-direction: column; /* Sắp xếp theo chiều dọc */
+    }
+
+    .SideBar {
+        width: auto; /* Đảm bảo Sidebar chiếm toàn bộ chiều ngang */
+        height: auto; /* Co giãn chiều cao nếu cần */
+    }
+
+    .main {
+        flex-direction: column; /* Nếu cần */
+        width: 100%; /* Chiếm toàn bộ chiều ngang */
+    }
+
+    .SideBar li {
+        margin-bottom: 10px;
+    }
+
+    .SideBar {
+        font-size: 16px; /* Giảm kích thước chữ */
+    }
+
+    .top-group{
+        width: auto;
+    }
+
+    .maininfo {
+        padding: 10px;
+    }
+
+    th, td {
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    .chart {
+        margin: 0;
+    }
+
+
+    .top-group{
+
+    }
+}
+
+/* Media Query cho màn hình nhỏ hơn 480px (Rất nhỏ) */
+@media (max-width: 480px) {
+    .container {
+        height: 100vh;
+        display: flex;
+        flex-direction: column; /* Hàng dọc để dễ xếp chồng */
+    }
+    .SideBar h3 {
+        font-size: 20px; /* Giảm kích thước tiêu đề */
+    }
+
+    .SideBar {
+        font-size: 14px;
+    }
+
+    .title {
+        font-size: 18px;
+        padding: 10px;
+    }
+}
