--- a/app/views/students/dashboard.html.erb
+++ b/app/views/students/dashboard.html.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag "style", media: "all", "data-turbo-track": "reload" %>
-  <title>Document</title>
+  <title>Top 10</title>
 </head>
 <body>
   
@@ -20,7 +20,7 @@
     <div class="SideBar">
       <h3 style="font-weight: bold;">Menu</h3>
       <ul >
-        <li><a href="/dashboard" style="font-weight: bold;">Dashboard</a></li>
+        <li><a href="/dashboard" style="font-weight: bold;">Top 10</a></li>
         <li><a href="/" >Search Scores</a></li>
         <li><a href="/report" >Reports</a></li>
       </ul>
