--- a/app/views/students/report.html.erb
+++ b/app/views/students/report.html.erb
@@ -6,7 +6,7 @@
   <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
   <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
   <%= stylesheet_link_tag "style", media: "all", "data-turbo-track": "reload" %>
-  <title>Document</title>
+  <title>Reports</title>
 </head>
 <body>
   
@@ -22,7 +22,7 @@
     <div class="SideBar">
       <h3 style="font-weight: bold;">Menu</h3>
       <ul >
-        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="/dashboard">Top 10</a></li>
         <li><a href="/" >Search Scores</a></li>
         <li><a href="/report" style="font-weight: bold;">Reports</a></li>
       </ul>
