--- a/app/views/students/report.html.erb
+++ b/app/views/students/report.html.erb
@@ -29,10 +29,8 @@
     </div>
 
     <div class="chart" >
-      <div class="barchart">
-        <%= column_chart @chart_data, title: "Student Score Statistics", colors: ["#4caf50", "#ffeb3b", "#ff9800", "#f44336"], height: "700px", 
+        <%= column_chart @chart_data, title: "Student Score Statistics", colors: ["#4caf50", "#ffeb3b", "#ff9800", "#f44336"], height: "60em", 
       width: "100%"  %>
-      </div>
     </div>
 
 
