--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -48,10 +48,11 @@
 }
 
 .maininfo{
-    width: 80%;
-    margin-left: 30px;
+    width: 100%;
+    padding:0 50px;
     
 }
+
 
 .formSearch{
     margin: 30px 0;
@@ -106,18 +107,11 @@ th, td {
 tr:hover {background-color: coral;}
 
 .chart {
-    display: flex;
-    justify-content: center; /* Căn giữa theo chiều ngang */
-    width: 80%;
-    margin-top: 20px;
+    
+    width: 100%;
+    margin: 20px;
   }
   
-  .barchart {
-    width: 80%; /* Hoặc giá trị cụ thể như 800px */
-    height: 500px; /* Tăng chiều cao nếu cần */
- 
-  }
-
 
   /* Media Query cho màn hình nhỏ hơn 768px (Mobile) */
 @media (max-width: 768px) {
