--- a/app/views/students/find_student.html.erb
+++ b/app/views/students/find_student.html.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Itim|Lobster|Montserrat:500|Noto+Serif|Nunito|Patrick+Hand|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab|Saira" rel="stylesheet">
   <%= stylesheet_link_tag "style", media: "all", "data-turbo-track": "reload" %>
   <title>Search Scores</title>
 </head>
