--- a/app/views/students/report.html.erb
+++ b/app/views/students/report.html.erb
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Itim|Lobster|Montserrat:500|Noto+Serif|Nunito|Patrick+Hand|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab|Saira" rel="stylesheet">
   <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
   <%= stylesheet_link_tag "style", media: "all", "data-turbo-track": "reload" %>
   <title>Reports</title>
@@ -29,7 +30,7 @@
     </div>
 
     <div class="chart" >
-        <%= column_chart @chart_data, title: "Student Score Statistics", colors: ["#4caf50", "#ffeb3b", "#ff9800", "#f44336"], height: "60em", 
+        <%= column_chart @chart_data, title: "Student Score Statistics", colors: ["#4caf50", "#ffeb3b", "#ff9800", "#f44336"], height: "70vh", 
       width: "100%"  %>
     </div>
 
